[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["niceweather94@gmail.com"]
description = "wasm test"
repository = "https://github.com/joonseolee/hello-wasm"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"